<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:padding="8dp" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_shadow_corners" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_corners"
            android:orientation="vertical"
            tools:context=".Home" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/data_acess_and_record_tool_dart"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#252525"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/for_support"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#252525"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:gravity="center"
                    android:text="@string/dev"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#252525"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
